# trip-planner

./: README.md  crew.py  itinerary.md  main.py  pyproject.toml  report.md  requirements.txt
config/: agents.yaml
src/sample_project/: app.py  mock_api.py
src/sample_project/config/: tasks.yaml
