[project]
name = "sample_project"
version = "0.1.0"
description = "sample-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "streamlit"
]

[project.scripts]
sample_project = "sample_project.main:run"
run_crew = "sample_project.main:run"
train = "sample_project.main:train"
replay = "sample_project.main:replay"
test = "sample_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
